[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Asteroid.gd" type="Script" id=1]
[ext_resource path="res://assets/images/asteroid_6.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 31.8539

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.7115

[sub_resource type="CircleShape2D" id=3]
radius = 32.3609

[sub_resource type="CapsuleShape2D" id=4]
radius = 15.1913
height = 39.2843

[sub_resource type="CircleShape2D" id=5]
radius = 32.0213

[sub_resource type="CapsuleShape2D" id=6]
radius = 22.9955
height = 24.1582

[sub_resource type="CircleShape2D" id=7]
radius = 31.6871

[node name="Asteroid" type="RigidBody2D" groups=[
"asteroids",
]]
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.25028, 0.166856 )
scale = Vector2( 3.21083, 3.25254 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Asteroid1CollisionShape" type="CollisionShape2D" parent="."]
visible = false
rotation = -0.6353
shape = SubResource( 2 )
disabled = true

[node name="Asteroid2CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )
disabled = true

[node name="Asteroid3CollisionShape" type="CollisionShape2D" parent="."]
visible = false
rotation = 0.507891
shape = SubResource( 4 )
disabled = true

[node name="Asteroid4CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )
disabled = true

[node name="Asteroid5CollisionShape" type="CollisionShape2D" parent="."]
visible = false
rotation = 0.633555
shape = SubResource( 6 )
disabled = true

[node name="Asteroid6CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )
disabled = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
